--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@ h2 a { display:block; margin-left:2em }
 
 <h2>Authors</h2>
 
-	<a href="sos.html">사회 현실을 반영한 가사</a>
+	<a href="sos.html">사회 현실을 반영한 가사</a><br />
+	<a href="https://github.com/zipnumsa/zipnumsa.github.io/wiki">깃 위키</a>
 	
 <h2>Copyright</h2>
 
