--- a/html/gonggam/index.html
+++ b/html/gonggam/index.html
@@ -108,7 +108,8 @@ document.write(" class=logo width=5 border=0></a>");
       <h2>&lt;공감적 듣기 하기 전&gt; (예능 &lt;우리 아이가 달라졌어요&gt; 일부).</h2>
       <video src="ai1.ogv" poster="ai1.PNG" preload="metadata" controls="controls"  height="480" width="640"></video>
       <h2>&lt;공감적 듣기 하고 나면&gt; (예능 &lt;우리 아이가 달라졌어요&gt; 일부).</h2>
-      <video src="ai2.ogv" poster="ai2.PNG" preload="metadata" controls="controls"  height="480" width="640"></video>
+<iframe src="https://player.vimeo.com/video/380266938" width="640" height="480" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<p><a href="https://vimeo.com/380266938">우리 아이가 달라졌어요</a> from <a href="https://vimeo.com/user85915706">Jangi ster</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
       <p>&nbsp;공감적 듣기를 교사가 실천하는 것만큼이나 학생들에게 가르치는 것이 필요하다. 예를 들어 수업 중에 딴짓하는 학생에게
         교사가 지적을 한다면 다음과 같이 된다. 학생이 이와 같이 교사의 말을 들을 수 있으면 수업 중 갈등이 거의 발생하지 않고
         평화로운 교실이 된다.</p>
