--- a/html/gonggam/index.html
+++ b/html/gonggam/index.html
@@ -109,7 +109,6 @@ document.write(" class=logo width=5 border=0></a>");
       <video src="ai1.ogv" poster="ai1.PNG" preload="metadata" controls="controls"  height="480" width="640"></video>
       <h2>&lt;공감적 듣기 하고 나면&gt; (예능 &lt;우리 아이가 달라졌어요&gt; 일부).</h2>
 <iframe src="https://player.vimeo.com/video/380266938" width="640" height="480" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-<p><a href="https://vimeo.com/380266938">우리 아이가 달라졌어요</a> from <a href="https://vimeo.com/user85915706">Jangi ster</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
       <p>&nbsp;공감적 듣기를 교사가 실천하는 것만큼이나 학생들에게 가르치는 것이 필요하다. 예를 들어 수업 중에 딴짓하는 학생에게
         교사가 지적을 한다면 다음과 같이 된다. 학생이 이와 같이 교사의 말을 들을 수 있으면 수업 중 갈등이 거의 발생하지 않고
         평화로운 교실이 된다.</p>
@@ -221,19 +220,6 @@ document.write(" class=logo width=5 border=0></a>");
       <video src="yoja.ogv" poster="yoja.PNG" preload="metadata" controls="controls"
 
         height="480" width="640"></video>
-      <h1>연습 </h1>
-      <form action=memo.php3 method=post name="">
-      <h2>&lt;사례1&gt;을 공감적으로 들을 경우</h2>
-      <b>옥주현: </b>언니 나 불안해. <br>
-      <b>송은이:</b>      <input type="text" name="name"   style="background-color:#FFFF99;border:1 solid black; size=10; width:400px">
-      <h2>&lt;사례2&gt;을 공감적으로 들을 경우</h2>
-      <b>&nbsp; 딸 : </b>어릴 때 새장에 밀어넣어서 새공포증 걸렸는데 다 엄마 때문이야. 정말 짜증나 미치겠고 엄마 미워
-      죽겠어.<br>
-      <b>엄 마: </b>        <input type="text" name="memo"   style="background-color:#FFFF99;border:1 solid black; width:600px"><br>
-        <br><br>
-        작성자 이름(선택사항. 안 써도 됨)<input type="text" name="email"  style="background-color:#FFFF99;border:1 solid black; size=10; width:70px">
-        <input type="submit" value="글올리기"  style="color:black;background-color:#FFFFFF;border:1 solid black;height:19px" name="submit">
-        <button type="button" onclick="location.href='http://jangi.net/xyz/output/gongam/list.php'" style="color:black;background-color:#FFFFFF;border:1 solid black;height:19px">사람들이 남긴 글 보러 가기</button>
-        </form></div>
+</div>
       </body>
 </html>
