--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <li><a href="" target="_blank">음성 자르고 편집하기</a></li>
             <li><a href="" target="_blank">그림 자르고 편집하기</a></li>
 </ul>
+  <div><a href="https://github.com/zipnumsa/zipnumsa.github.io/wiki">참고</a></div>
 </body>
 </html>
 
