--- a/index.html
+++ b/index.html
@@ -1,57 +1,67 @@
-<!DOCTYPE html> 
-<html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>문법 연수</title>
-</head>
-<body>
-<p>[참여형] 연수 참가 관련</p>
-<ul>
-                    <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfQCp_JmaVPmAVOKPSJ0mR5Q71sVuRn_YmC7CVBESxAYT86Tw/viewform?embedded=true" target="_blank">연수에서 얻어가고 싶은 것 쓰기</a></li>
-                    <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfQCp_JmaVPmAVOKPSJ0mR5Q71sVuRn_YmC7CVBESxAYT86Tw/viewanalytics" target="_blank">다른 사람의 연수 목표 보기</a></li>
-</ul>
-       
-<p>[참여형] 수업 사례 공유</p>
-<ul>
-            <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeLX9-Pxc_qyK7b7-nJUODbq3_lJ7PWiHMtuBOYOAdICyvCBA/viewform?embedded=true" target="_blank">잘 된 수업 사례 나눠 주기</a></li>
-            <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeLX9-Pxc_qyK7b7-nJUODbq3_lJ7PWiHMtuBOYOAdICyvCBA/viewanalytics?embedded=true" target="_blank">잘 된 수업 사례 결과 보기</a></li>
-</ul>
-<p>형성적 평가를 위하여</p>
-<ul>
-            <li><a href="" target="_blank">진단평가에 적합한 멘티미터</a></li>
-            <li><a href="" target="_blank">형성평가에 적합한 플리커스</a></li>
-            <li><a href="" target="_blank">총괄평가에 적합한 구글설문</a></li>
-            <li><a href="" target="_blank">암기숙달에 적합한 클래스카드</a></li>
-            <li><a href="" target="_blank">수행평가에 적합한 플립그리드</a></li>
-</ul>
-<p>자료 수집을 위하여</p>
-<ul>
-    <li>현실 자료</li>
-        <ul>
-                <li><a href="http://best.mqoo.com/:">http://best.mqoo.com/:</a> 오유,클리앙,SLR,뽐뿌,82쿡,엠팍,보배,루리,웃대,딴지</li>
-                <li><a href="http://trenday.net/main/all">http://trenday.net/main/all</a>-&gt; 82쿡, MLB, 클량, SLR, 뽐뿌, OKJSP, PHP스쿨, 데브피아</li>
-                <li><a href="http://www.jagei.co.kr/">http://www.jagei.co.kr/</a>-&gt; 뽐뿌, SLR, 보배, 네이트판, 루리, 오유, MLB, 웃대, 82쿡, 디씨, 10p,  성사(성대사랑)</li>
-                <li><a href="http://www.ilchu.com/">http://www.ilchu.com/</a>-&gt; 오유, 클리앙, 웃대, 82쿡, 파코즈,네이버뉴스,네이버웹툰,SLR</li>
-                <li><a href="http://beobe.us/">http://beobe.us/</a>-&gt;  클량 불펜 뽐뿌 82쿡 오유 보배</li>
-                <li><a href="http://qscrap.com/">http://qscrap.com/</a>-&gt; 오늘의유머딴지일보클리앙뽐 뿌루리웹디시인사이드웃긴대학보배드림</li>
-                <li><a href="http://m.hotge.co.kr/">http://m.hotge.co.kr/</a>-&gt; 보배,오유,일베,SLR,뽐뿌,랜덤</li>
-            </ul>
-<li>수업 자료</li>
-        <ul>
-<li><a href="" target="_blank">전국모</li>
-<li><a href="" target="_blank">참사랑</li>
-<li><a href="" target="_blank">개인</li>
-</ul>
-<p>자료 가공을 위하여</p>
-<ul>
-            <li><a href="" target="_blank">유튜브 영상 다운로드</a></li>
-            <li><a href="" target="_blank">네이버TV등 영상 녹화</a></li>
-            <li><a href="" target="_blank">영상 자르기</a></li>
-            <li><a href="" target="_blank">영상 편집하기</a></li>
-            <li><a href="" target="_blank">음성 자르고 편집하기</a></li>
-            <li><a href="" target="_blank">그림 자르고 편집하기</a></li>
-</ul>
-  <div><a href="https://github.com/zipnumsa/zipnumsa.github.io/wiki">참고</a></div>
-</body>
-</html>
 
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+
+<head><title>XFN 1.1 profile</title>
+
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+<meta name="author" lang="tr" content="Tantek &Ccedil;elik" />
+
+<meta name="author" content="Matthew Mullenweg" />
+
+<meta name="author" content="Eric Meyer" />
+
+<link type="text/css" href="default.css" rel="alternate stylesheet" title="xfn default.css" />
+
+<style type="text/css">
+
+/*<![CDATA[*/
+
+body { background: #FCFAEA; color: black; font: small/1.2 Verdana, Arial, sans-serif; margin: 0; padding: 2em 10%; }
+
+dl { margin:0 0 0 2em }
+
+dt { font-weight:bold } 
+
+h3 { margin:0; font-weight:normal; font-size:1em } 
+
+h3:first-letter { text-transform:capitalize; }
+
+h2 a { display:block; margin-left:2em }
+
+#warning { border: 1px solid red; background-color: #c33; padding: 1em;}
+
+/*]]>*/
+
+</style>
+
+<link rel="contents" href="." title="XFN - XHTML Friends Network" />
+
+<link rel="start" href="intro" title="XFN: Introduction and Examples" />
+
+<link rel="help" href="faq" title="XFN: FAQ" />
+
+<link rel="copyright" href="#copyright" title="Copyright" />
+
+</head>
+
+<body>
+
+<h1><abbr title="XHTML Friends Network">XFN</abbr> 1.1 relationships meta data profile</h1>
+
+<h2>Authors</h2>
+
+	<a href="sos.html">사회 현실을 반영한 가사</a><br />
+		<a href="./html/gonggam/index.html">공감 대화 수업 </a><br />
+	<a href="./html/pano/manno.html">360도(1)</a> <a href="./html/pano/manyes.html">360도(2)</a><br />
+	<a href="https://github.com/zipnumsa/zipnumsa.github.io/wiki">깃 위키</a>
+	
+<h2>Copyright</h2>
+
+<p id="copyright">Copyright &copy; 2003&#8211;2019  GMPG <a href="#authors"></a>. <a rel="license" href="http://creativecommons.org/licenses/by-nd/2.0/">Some rights reserved</a>.</p>
+
+</body>
+
+</html>
