--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ h2 a { display:block; margin-left:2em }
 	<a href="sos.html">사회 현실을 반영한 가사</a><br />
 		<a href="./html/gonggam/index.html">공감 대화 수업 </a><br />
 	<a href="./html/pano/manno.html">360도(1)</a> <a href="./html/pano/manyes.html">360도(2)</a><br />
-	<a href="https://github.com/zipnumsa/zipnumsa.github.io/wiki" style="font-size:20px;font-color:red;">깃 위키</a>
+	<a href="https://github.com/zipnumsa/zipnumsa.github.io/wiki" style="font-size:20px;font-color:red;">문법 </a>
 	
 <h2>Copyright</h2>
 
