--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@ h2 a { display:block; margin-left:2em }
 
 <h2>Authors</h2>
 
+	<a href="https://github.com/zipnumsa/zipnumsa.github.io/wiki" style="font-size:20px;font-color:red;">문법 교육 연수용</a><br /><br /><br />
 	<a href="sos.html">사회 현실을 반영한 가사</a><br />
 		<a href="./html/gonggam/index.html">공감 대화 수업 </a><br />
 	<a href="./html/pano/manno.html">360도(1)</a> <a href="./html/pano/manyes.html">360도(2)</a><br />
-	<a href="https://github.com/zipnumsa/zipnumsa.github.io/wiki" style="font-size:20px;font-color:red;">문법 교육 연수용</a>
 	
 <h2>Copyright</h2>
 
