--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ h2 a { display:block; margin-left:2em }
 </head>
 
 <body>
+	
 
 <h1><abbr title="XHTML Friends Network">XFN</abbr> 1.1 relationships meta data profile</h1>
 
@@ -61,7 +62,27 @@ h2 a { display:block; margin-left:2em }
 <h2>Copyright</h2>
 
 <p id="copyright">Copyright &copy; 2003&#8211;2019  GMPG <a href="#authors"></a>. <a rel="license" href="http://creativecommons.org/licenses/by-nd/2.0/">Some rights reserved</a>.</p>
+<div id="disqus_thread"></div>
+<script>
 
-</body>
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://zipnumsa.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+                            
+<script id="dsq-count-scr" src="//zipnumsa.disqus.com/count.js" async></script></body>
 
 </html>
