--- a/disqus.html
+++ b/disqus.html
@@ -3,7 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
-<head><title>XFN 1.1 profile</title>
+<head><title>문법 연수</title>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
