--- a/disqus.html
+++ b/disqus.html
@@ -59,7 +59,7 @@ h2 a { display:block; margin-left:2em }
 
 <h2>Copyright</h2>
 
-<p id="copyright">Copyright &copy; 2003&#8211;2019  GMPG <a href="#authors"></a>. <a rel="license" href="http://creativecommons.org/licenses/by-nd/2.0/">Some rights reserved</a>.</p>
+<p id="copyright">Copyright &copy; 2000&#8211;2020  JANGI <a href="#authors"></a>. <a rel="license" href="http://jangi.net">Some rights reserved</a>.</p>
 <div id="disqus_thread"></div>
 <script>
 
