--- a/disqus.html
+++ b/disqus.html
@@ -53,9 +53,9 @@ h2 a { display:block; margin-left:2em }
 
 <h1>문법 수업 자료를 위한 페이지</h1>
 
-잘했던 수업에 대한 가벼운 소개는 <a href="https://docs.google.com/forms/d/e/1FAIpQLSeLX9-Pxc_qyK7b7-nJUODbq3_lJ7PWiHMtuBOYOAdICyvCBA/viewanalytics?embedded=true">이곳</a>에서 입력하셨을 겁니다. 그걸로 부족하신 분들은 이곳에 댓글을 달아 주세요.(페이스북이나 구글로 로그인해도 되고, 아마 로그인 안 해도 될 거예요.)<br>
+<h1>잘했던 수업에 대한 가벼운 소개는 <a href="https://docs.google.com/forms/d/e/1FAIpQLSeLX9-Pxc_qyK7b7-nJUODbq3_lJ7PWiHMtuBOYOAdICyvCBA/viewanalytics?embedded=true">이곳</a>에서 입력하셨을 겁니다. 그걸로 부족하신 분들은 이곳에 댓글을 달아 주세요.(페이스북이나 구글로 로그인해도 되고, 아마 로그인 안 해도 될 거예요.)<br>
 학습지나 그림, 음악, 영상 자료 등을 공유하실 분은 <a href="https://tmpstorage.com">임시 저장소</a> 페이지에 가서 파일을 올리시고 '다운로드 링크'를 복사해서 아래 댓글란에 자료 소개, 설명과 함께, 적어주시면 됩니다.<br>
-<a href="https://tmpstorage.com">임시 저장소</a> 페이지에 올리실 때 저장 기한을 30일, 다운 횟수를 1,000회 정도로 설정하시면 무난할 겁니다.(안 그러면 파일이 자동으로 삭제돼 버려요.)
+<a href="https://tmpstorage.com">임시 저장소</a> 페이지에 올리실 때 저장 기한을 30일, 다운 횟수를 1,000회 정도로 설정하시면 무난할 겁니다.(안 그러면 파일이 자동으로 삭제돼 버려요.)</h1>
 
 <h2>Copyright</h2>
 
