--- a/disqus1.html
+++ b/disqus1.html
@@ -45,7 +45,9 @@ h2 a { display:block; margin-left:2em }
 <p>아래에 댓글로 어떤 수업을 어떤 의도로 기획해서 어떤 준비를 했는데 어떤 결과가 나왓는지 간략하게 써 주세요.</p>
 <p>다른 사람의 댓글을 읽고 대댓글을 달아주세요. 서로가 서로에게 힘이 되는 공간이 되기를 바랍니다.</p>
 
-<h2>Copyright</h2>
+<h2>익명 글쓰기 가능합니다</h2>
+댓글 쓰시고 체크한 부분에 아무렇게나 적으면 됩니다.<br>
+<img src="./img/IMG_20200109_200401.jpg" width="800px">
 
 <p id="copyright">Copyright &copy; 2000&#8211;2020  JANGI <a href="#authors"></a>. <a rel="license" href="http://jangi.net">Some rights reserved</a>.</p>
 <div id="disqus_thread"></div>
