--- a/html/wa/index.html
+++ b/html/wa/index.html
@@ -4,6 +4,12 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>모음 축약</title>
+    <style>
+    p
+    {
+    font-size: 2em;
+    }
+    </style>
   </head>
   <body>
       <h1>모음 축약 </h1>
