--- a/html/wa/index.html
+++ b/html/wa/index.html
@@ -4,7 +4,10 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>모음 축약</title>
-    <style>
+<style type="text/css">
+body{
+font-size: 100%;
+}
     p
     {
     font-size: 2em;
