--- a/html/honor/index.htm
+++ b/html/honor/index.htm
@@ -37,7 +37,7 @@
 <p>동남 방언에서는 이와 방식은 다르지만 선어말 어미를 이용한 상대 높임 표현이 존재한다.</p>
 <p align="center"><img alt="그림입니다.
 &#xA;원본 그림의 이름: CLP000031700004.bmp
-&#xA;원본 그림의 크기: 가로 1226pixel, 세로 421pixel" height="113" src="DRW00002ac8a215.gif" v:shapes="_x317695016" width="315"/></p>
+&#xA;원본 그림의 크기: 가로 1226pixel, 세로 421pixel" src="DRW00002ac8a215.gif" v:shapes="_x317695016"/></p>
 <ul>
     <p>(9) 가. 어서
 오-시-이-소   <br>
@@ -53,7 +53,7 @@
 높임’만의 표지로만 쓰인다. 그러기에 (9가)처럼 ‘-시-’가 마지막으로 한 번 더 들어갈 수 있는 것이다.</p>
 <p>현대 국어 표준어에서 상대 높임은 ‘종결 어미’를 통해서만 표현되지만 동남 방언에서 상대 높임이 ‘선어말 어미’를
 통해서 실현되기도 한다는 점에서 마치 &lt;표2&gt;의 중세 국어의 상대 높임 선어말 어미와 비슷하다.</p>
-<p align="center"><img src="img1.gif" border="0" width="563" height="140"></p>
+<p align="center"><img src="img1.gif" border="0"></p>
 <p>(7가)에서
 보듯이 명령문에서 가장 높은 등급에 붙는 종결 어미는 ‘-ㅂ시오’이고 (8가)에서 보듯이 여기에 ‘-시-’를 넣어 ‘-십시오’를 쓰면 그보다 더 높이는 표현이 된다. 고객과
 민원인을 대하는 직종의 사람들이 고객과 민원인에게 다음 (10)와 같이 말해야 할 경우가 있다.</p>
@@ -71,7 +71,7 @@
 ‘-십시오’ 자체가 기본형이 된 상황에서 상대를 극도로 높인다는 서비스직 종사자의 의도는 어떻게 드러나는가? 다음 그림 속 한 국어 교사의 푸념에서 ‘-실게요’라는 표현을 발견할 수 있다.</p>
 <p align="center"><img alt="그림입니다.
 &#xA;원본 그림의 이름: CLP00003170b967.bmp
-&#xA;원본 그림의 크기: 가로 1440pixel, 세로 748pixel" height="174" src="DRW00002ac8a20b.gif" v:shapes="_x156336488" width="412"/></p>
+&#xA;원본 그림의 크기: 가로 1440pixel, 세로 748pixel" src="DRW00002ac8a20b.gif" v:shapes="_x156336488" /></p>
 <ul>
     <p>(11) 가. 여기
 앉으실게요.    <br>
@@ -88,7 +88,7 @@
 서비스직 종사자의 본래 의도는 아니다. 다음 그림과 같은 과도한 갑질에 의해 강요된 궁여지책인 것이다. </p>
 <p align="center"><img alt="그림입니다.
 &#xA;원본 그림의 이름: CLP000037a80006.bmp
-&#xA;원본 그림의 크기: 가로 379pixel, 세로 181pixel" height="174" src="DRW00002ac8a20e.gif" v:shapes="_x156414888" width="356"/></p>
+&#xA;원본 그림의 크기: 가로 379pixel, 세로 181pixel" src="DRW00002ac8a20e.gif" v:shapes="_x156414888"/></p>
 <p>이 그림은 하나의 풍자에 지나지 않지만 ‘갑질’과 ‘감정 노동’으로 대표되는 ‘과도하게 대우받으려는’, ‘과도한 공손함을 요구하는’
 현대의 세태를 단적으로 드러낸다.</p>
 <p>과도하게 대우받고, 과도하게 공손함을 요구하는 사람들(주로 고객이나 민원인)은 아무리 높임의 표현이 제대로 쓰였더라도 ‘명령
@@ -98,18 +98,18 @@
 본래 ‘-ㄹ게’에서
 온 말이다. 특이한 것은 ‘-ㄹ게’와 ‘-ㄹ게요’ 같은 비격식체에는 이 종결 어미가 자연스레 사용되는데 ‘격식체’의 경우 ‘-ㄹ게’에 대응하는 자연스러운 종결 어미가 없다는 점이다. 굳이 찾는다면 &lt;표3&gt;처럼 ‘-겠-’이나 ‘-을 것’
 정도가 대응될 것 같다.</p>
-<p align="center"><img src="img2.gif" border="0" width="572" height="188"></p>
+<p align="center"><img src="img2.gif" border="0"></p>
 <p>주어가 1인칭인 경우 ‘-ㄹ게’는 약속법이 된다.
 그러나 주어가 2인칭인 경우 ‘약속’이라는 개념 자체에 모순이 되므로 저절로 비문이 된다. 그런데 격식체에서 ‘-ㄹ게’에 대응한다고 보았던 ‘-겠-’이나 ‘-을 것’은 주어가 2인칭이라도 아무런 문제가 없다.
 다만 이때에는 ‘약속’의
 의미는 사라지고 미래라는 시간 표현만 남게 된다. </p>
-<p align="center"><img src="img3.gif" border="0" width="601" height="194"></p>
+<p align="center"><img src="img3.gif" border="0"></p>
 <p>&lt;표3&gt;과
 &lt;표4&gt;에서 격식체와 비격식체의 최고 등급 둘을 비교해 보자.
 아래 &lt;표5&gt;에서
 보다시피, 1인칭 주어의 약속법인 경우 격식체에서는 ‘-겠-’이 자연스럽고 ‘-을 것’은 ‘약속’의 의미가 약화되고 ‘미래’라는 시간 표현이 강조된다. 2인칭
 주어의 약속법인 경우 비격식체는 아예 비문이 되는 반면, 격식체에서는 ‘약속’의 의미가 약화될지언정 비문이 되지는 않는다. 1인칭과 달리 이때 ‘-겠-’보다는 ‘-을 것’이 자연스럽고, ‘-겠-’은 ‘미래’보다는 추측에 가까워진다.</p>
-<p align="center"><img src="img4.gif" border="0" width="534" height="212"></p>
+<p align="center"><img src="img4.gif" border="0"></p>
 <p>이를 통해 (11)과 같은 ‘-실게요’의 의미를 조심스럽게 추측해 본다면, ‘(당신이) 여기 앉으실게요.’는 약속의 의미가 아니라,
 ‘(당신이) 여기 앉으실 겁니다.’에
 대응하는 비격식체 문장인, ‘(당신이) 여기 앉으실 거예요.’라는 ‘미래’의 의미가 담겨 있는
