--- a/html/guide/index2.html
+++ b/html/guide/index2.html
@@ -26,6 +26,6 @@
 <p><img src="img/i5.jpg" width="1080" height="2246" border="0"></p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<h1><a href="./index.html">처음으로 돌아가기</a></h1>
+<h1><a href="./index1.html">처음으로 돌아가기</a></h1>
 </body>
 </html>
