--- a/html/guide/index1.html
+++ b/html/guide/index1.html
@@ -31,6 +31,6 @@
 <h1>2-1-3. 이런 내용이 추가되었습니다.</h1>
 <p><img src="img/t03.jpg" width="1080" height="2246" border="0"></p>
 <p>&nbsp;</p>
-<h1>* 만약 글에 &quot;그림&quot;을 넣고 싶다면? <a href="./index.html">→보러 가기</a></h1>
+<h1>* 만약 글에 &quot;그림&quot;을 넣고 싶다면? <a href="./index2.html">→보러 가기</a></h1>
 </body>
 </html>
