--- a/html/guide/index2.html
+++ b/html/guide/index2.html
@@ -8,22 +8,22 @@
 <body bgcolor="white" text="black" link="blue" vlink="purple" alink="red">
 <h1>국어교육위키에서 글 작성시 &quot;그림&quot; 삽입하는 법.</h1>
 <h1>1. 툴바에서&nbsp;액자 그림을 누른다. </h1>
-<p><img src="img/i0.jpg" width="1080" height="2246" border="0"></p>
+<p><img src="img/i0.jpg" width="540" border="0"></p>
 <p>&nbsp;</p>
 <h1>2. &quot;파일 선택&quot;을 누른다.</h1>
-<p><img src="img/i1.jpg" width="1080" height="2246" border="0"></p>
+<p><img src="img/i1.jpg" width="540" border="0"></p>
 <p>&nbsp;</p>
 <h1>2. 파일을 올리면 다음과 같이 파일 이름이 &quot;<font color="#0070C0">파랗게</font>&quot; 보이는데 그걸 누른다.</h1>
-<p><img src="img/i2.jpg" width="1080" height="2246" border="0"></p>
+<p><img src="img/i2.jpg" width="540" border="0"></p>
 <p>&nbsp;</p>
 <h1>3. 다음과 같이 그림 크기와 배치를 설정한다.</h1>
-<p><img src="img/i3.jpg" width="1080" height="2246" border="0"></p>
+<p><img src="img/i3.jpg" width="540" border="0"></p>
 <p>&nbsp;</p>
 <h1>4. 입력창에 그림이 삽입된 걸 확인하고 &quot;저장&quot;을 누른다.</h1>
-<p><img src="img/i4.jpg" width="1080" height="2246" border="0"></p>
+<p><img src="img/i4.jpg" width="540" border="0"></p>
 <p>&nbsp;</p>
 <h1>5. 실제 화면에 그림이 삽입된 걸 확인하면 성공. 그림이 너무 크거나 적으면 다시 &quot;문서 편집&quot;을 눌러서 이미지 크기를 살짝 조절한다.</h1>
-<p><img src="img/i5.jpg" width="1080" height="2246" border="0"></p>
+<p><img src="img/i5.jpg" width="540" border="0"></p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <h1><a href="./index1.html">처음으로 돌아가기</a></h1>
