--- a/html/book/kdm.htm
+++ b/html/book/kdm.htm
@@ -10,7 +10,7 @@
 <h1>좋은 시를 좋게 쓰는 방법</h1>
 <p>- 박진성, 『김소월을 몰라도 현대시작법』, 미디어샘</p>
 <p>&nbsp;</p>
-<p>김동민</p>
+<p>감천중 김동민</p>
 <p>&nbsp;</p>
 <p>이 책은 2018년 여름에 출판된 나온 지 얼마 되지 않은 책이다. 책에는 시를 처음 쓰는 사람이나 좋은 시를 쓰고 싶은 사람들에게 일종의 ‘팁’들이 많이 담겨 있다. 나 또한 시를 처음 쓸 때 어떻게 써야 할지 몰라서 헤매다가 이 책을 읽고 시의 감각과 리듬을 조금이나마 습득하게 된 것 같다. 지금부터 시를 잘 쓰는 방법, 시가 좋아하고 싫어하는 것들. 현대 시들의 문제점, 시와 노래가 비슷한 점을 써 보겠다.</p>
 <p>&nbsp;</p>
