--- a/index.html
+++ b/index.html
@@ -63,5 +63,9 @@ h2 a { display:block; margin-left:2em }
 <h2>Copyright</h2>
 
 <p id="copyright">Copyright &copy; 2003&#8211;2019  GMPG <a href="#authors"></a>. <a rel="license" href="http://creativecommons.org/licenses/by-nd/2.0/">Some rights reserved</a>.</p>
-
+<!-- 코스모스팜 소셜댓글 시작 -->
+<script id="cosmosfarm-comments-script" type="text/javascript" src="https://plugin.cosmosfarm.com/comments.js"></script>
+<div id="cosmosfarm-comments" data-plugin-id="1735972715076059" data-href="http://zipnumsa.github.io" data-width="100%" data-row="10"><a href="http://www.cosmosfarm.com/plugin/comments">코스모스팜 소셜댓글</a></div>
+<!-- 코스모스팜 소셜댓글 종료 -->
+</body>
 </html>
