--- a/html/tree/menu/index.html
+++ b/html/tree/menu/index.html
@@ -17,16 +17,13 @@
 	</head>
 	<body>
 
-	<h1 id="banner"><a href="http://bassistance.de/jquery-plugins/jquery-plugin-treeview/">jQuery Treeview Plugin</a> Demo</h1>
 	<div id="main">
-
-	<h4>Sample 3 - fast animations, all branches collapsed at first, red theme, cookie-based persistance</h4>
 	<ul id="red" class="treeview-red">
 	<li><span>Item 1</span>
 		<ul>
 			<li><span>Item 1.0</span>
 				<ul>
-					<li><span>Item 1.0.0</span></li>
+					<li><span><a href="http://bassistance.de/jquery-plugins/jquery-plugin-treeview/">Item 1.0.0</a></span></li>
 				</ul>
 			</li>
 			<li><span>Item 1.1</span></li>
