--- a/html/tree/3/index.html
+++ b/html/tree/3/index.html
@@ -36,7 +36,19 @@
 										<li>
 											<a href="#">Submenu</a>
 											<ul>
+												<li><ul>
+												<li><ul>
 												<li><a href="#">Lorem dolor</a></li>
+												<li><a href="#">Phasellus magna</a></li>
+												<li><a href="#">Magna phasellus</a></li>
+												<li><a href="#">Etiam nisl</a></li>
+												<li><a href="#">Veroeros feugiat</a></li>
+											</ul>/li>
+												<li><a href="#">Phasellus magna</a></li>
+												<li><a href="#">Magna phasellus</a></li>
+												<li><a href="#">Etiam nisl</a></li>
+												<li><a href="#">Veroeros feugiat</a></li>
+											</ul></li>
 												<li><a href="#">Phasellus magna</a></li>
 												<li><a href="#">Magna phasellus</a></li>
 												<li><a href="#">Etiam nisl</a></li>
