--- a/html/tree/3/index.html
+++ b/html/tree/3/index.html
@@ -34,11 +34,11 @@
 										<li><a href="#">Magna phasellus</a></li>
 										<li><a href="#">Etiam sed tempus</a></li>
 										<li>
-											<a href="#">Submenu</a>
+											<a href="#">Submenu1</a>
 											<ul>
-												<li>
+												<li><a href="#">Submenu2</a>
 													<ul>
-														<li><ul>
+														<li><ul><a href="#">Submenu3</a>
 															<li><a href="#">Lorem dolor</a></li>
 															<li><a href="#">Phasellus magna</a></li>
 															<li><a href="#">Magna phasellus</a></li>
@@ -48,12 +48,6 @@
 														</li>
 													</ul>
 												</li>
-												<li><a href="#">Phasellus magna</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
-											</ul>
-										</li><ul>
 												<li><a href="#">Phasellus magna</a></li>
 												<li><a href="#">Magna phasellus</a></li>
 												<li><a href="#">Etiam nisl</a></li>
