--- a/html/dic/book/1-1-2.html
+++ b/html/dic/book/1-1-2.html
@@ -29,13 +29,13 @@
 		<ul>
 			<li><a href="#">1.1. 문법</a>
 				<ul>
-					<li><a href="#">1.1.개념</a></li>
-					<li><a href="#">1.2.활용</a></li>
-					<li><a href="#">1.3. 언어학Three</a></li>
-					<li><a href="#">1.4. 국어학Four</a></li>
+					<li><a href="book/1-1-1.html">1.1.1.개념</a></li>
+					<li><a href="book/1-1-2.html">1.1.2.활용</a></li>
+					<li><a href="book/1-1-3.html">1.1.3. 언어학Three</a></li>
+					<li><a href="book/1-1-4.html">1.1.4. 국어학Four</a></li>
 				</ul>
 			</li>
-			<li><a href="#">1.2. 한국어</a>
+			<li><a href="book/1-2.html">1.2. 한국어</a>
 				<ul>
 					<li><a href="#">1.1.개념</a></li>
 					<li><a href="#">1.2.범위</a></li>
