--- a/html/dic/book/1-2.html
+++ b/html/dic/book/1-2.html
@@ -17,7 +17,7 @@
 <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 <script type="text/javascript">
       $(document).ready(function(){
-         $("#header").load("header.html #nav")
+         $("#header1").load("header.html #header")
       });
 </script>    
  </head>
@@ -26,7 +26,7 @@
 		<div id="page-wrapper">
 
 				<!-- Header-->		
-    				<header id="header" class="header">				</header>
+    				<div id="header1"></div>
     	
 			<!-- Main -->
 				<section id="main" class="container">
