--- a/html/dic/book/header.html
+++ b/html/dic/book/header.html
@@ -1,5 +1,5 @@
-
-					<nav id="nav">
+				<header id="header" name="header">
+									<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="#" class="icon fa-angle-down">목차</a>
@@ -61,3 +61,4 @@
 							</li>
 						</ul>							
 					</nav>
+</header>
