--- a/html/dic/book/index.html
+++ b/html/dic/book/index.html
@@ -12,6 +12,12 @@
 		<!--[if lte IE 8]><script src="../assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="../assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="../assets/css/ie8.css" /><![endif]-->
+		<script type="text/javascript">
+ function msg(){
+ document.getElementById("header").innerHTML='<object type="text/html" data="header.html"></object>';
+}
+ window.onload=msg;
+</script>
 	</head>
 	<body>
 	
@@ -19,70 +25,7 @@
 
 				<!-- Header-->		
 
-				<header id="header">
-													<h1>문법 교육 교육 공간</h1>
-					<nav id="nav">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="#" class="icon fa-angle-down">목차</a>
-<ul>
-	<li><a href="#">1. 총론</a>
-		<ul>
-			<li><a href="#">1.1. 문법</a>
-				<ul>
-					<li><a href="1-1-1.html">1.1.1.개념</a></li>
-					<li><a href="1-1-2.html">1.1.2.활용</a></li>
-					<li><a href="1-1-3.html">1.1.3. 언어학Three</a></li>
-					<li><a href="1-1-4.html">1.1.4. 국어학Four</a></li>
-				</ul>
-			</li>
-			<li><a href="1-2.html">1.2. 한국어</a>
-				<ul>
-					<li><a href="#">1.1.개념</a></li>
-					<li><a href="#">1.2.범위</a></li>
-					<li><a href="#">1.3. 비교언어학Three</a></li>
-					<li><a href="#">1.4. 계통Four</a></li>
-				</ul>
-			</li>
-			<li><a href="#">1.3. 기타 단일 항목</a></li>
-		</ul>
-	</li>
-	<li><a href="#">2. 문장</a>
-		<ul>
-			<li><a href="#">2.1. 문장 성분</a>
-				<ul>
-					<li><a href="#">2.1.개념</a></li>
-					<li><a href="#">2.2.주성분</a></li>
-					<li><a href="#">2.3. 부속성분</a></li>
-					<li><a href="#">1.4. 독립성분</a></li>
-				</ul>		
-			</li>
-			<li><a href="#">2.2.문장 확장</a>
-				<ul>
-					<li><a href="#">2.2.연결</a></li>
-					<li><a href="#">2.2.내포</a>
-						<ul>
-							<li><a href="#">2.2.1.품사절</a></li>
-							<li><a href="#">2.2.1.성분절</a></li>
-						</ul>
-					</li>
-				</ul>		
-			</li>
-		</ul>
- </li>
-	<li><a href="#">3. 담화</a></li>
-	<li><a href="#">4. 형태</a>
-		<ul>
-			<li><a href="#">2.4.1.Option One</a></li>
-			<li><a href="#">Option Two</a></li>
-			<li><a href="#">Option Three</a></li>
-			<li><a href="#">Option Four</a></li>
-		</ul>
-	</li>
-</ul>
-							</li>
-						</ul>							
-					</nav>
+				<header id="header" name="header">
 				</header>
 				
 			<!-- Main -->
