--- a/html/dic/book/header.html
+++ b/html/dic/book/header.html
@@ -1,4 +1,4 @@
-				<header id="header" name="header">
+				<header id="header">
 									<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
