--- a/html/dic/book/1-2.html
+++ b/html/dic/book/1-2.html
@@ -14,6 +14,7 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="../assets/css/ie8.css" /><![endif]-->
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <script src="/static/js/includeHTML.js"></script>
  </head>
 	<body>
 	
