--- a/html/dic/book/1-2.html
+++ b/html/dic/book/1-2.html
@@ -21,7 +21,7 @@
 		<div id="page-wrapper">
 
 				<!-- Header-->		
-    				    				    <div include-html="./header.html"></div>
+    				    				    <div include-html="header.html"></div>
     	
 			<!-- Main -->
 				<section id="main" class="container">
