--- a/html/dic/book/index.html
+++ b/html/dic/book/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="../assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="../assets/css/ie8.css" /><![endif]-->
 		<script type="text/javascript">
-$(document).ready(function(){
+		window.onload=function(){
     document.getElementById("header1").innerHTML='<object type="text/html" data="header.html"></object>';
 })
 </script>
