--- a/html/dic/book/index.html
+++ b/html/dic/book/index.html
@@ -15,7 +15,7 @@
 		<script type="text/javascript">
 		window.onload=function(){
     document.getElementById("header1").innerHTML='<object type="text/html" data="header.html"></object>';
-})
+}
 </script>
 	</head>
 	<body>
@@ -23,8 +23,7 @@
 		<div id="page-wrapper">
 
 				<!-- Header-->		
-
-				<div id="header1"></div>
+<header id="header1"></header>
 								
 			<!-- Main -->
 				<section id="main" class="container">
