--- a/html/book/ysi.htm
+++ b/html/book/ysi.htm
@@ -13,7 +13,10 @@ style="img {
 </head>
 
 <body>
-<img src="ysi.jpg" />
+<p>"나라가 이만하면 잘 사는데 왜 그리 죽는 소리들을 하나."</p>
+<p><img src="ysi1.png" /></p>
+<p>"나라가 이만하면 잘 사는데 왜 그리 죽는 소리들을 하나."</p>
+<p><img src="ysi2.png" /></p>
 </body>
 
 </html>
