--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@ h2 a { display:block; margin-left:2em }
 		<a href="./html/gonggam/index.html">공감 대화 수업 </a><br />
 	<a href="./html/pano/manno.html">360도(1)</a> <a href="./html/pano/manyes.html">360도(2)</a><br />
 	<a href="http://wo.to/board/board.php?id=a.1.jangi">무료게시판(2)</a><br />
+		<a href="./html/book/ysi.html">담화 맥락 </a><br />
 	
 <h2>Copyright</h2>
 
