--- a/html/book/ysi.htm
+++ b/html/book/ysi.htm
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>담화의 맥락</title>
 <style>
-style="img {
+img {
   max-width: 100%;
   height: auto;
 }
