--- a/html/bs/index.html
+++ b/html/bs/index.html
@@ -95,6 +95,14 @@
 								<p>&nbsp;&nbsp;‘학생을 이해’하기 위해, "힘들어요." 하는 학생에게 "왜 힘드니?"라고 묻는 것은 적절하지 않다. "불안해요." 하는 학생에게 "왜 불안하니?"라고 묻는 것도 적절하지 않다. 아래 영상의 '불안해 하는 사람' 표정을 보자. 불안해 하는 사람에게 말 거는 옆 사람의 대응이 적절해 보이는지?</p>
 								<video src="./videos/00_nagasu.mp4"  poster="./images/nagasu.png" width="640" preload="metadata" controls="controls"></video>
 								<p>&nbsp;&nbsp;‘학생을 이해’하기 위해 기초적인 수준의 상담 대화 기술을 응용하면 큰 도움이 된다. 이 아래의 이야기는 기초적인 수준의 상담 대화 기술을 실제로 어떻게 응용하는지에 관한 내용들이다.</p>
+								<img src="images/001.png" alt="" />
+								<img src="images/002.png" alt="" />
+								<img src="images/003.png" alt="" />
+								<img src="images/004.png" alt="" />
+								<img src="images/005.png" alt="" />
+								<img src="images/006.png" alt="" />
+								<img src="images/007.png" alt="" />
+								<p>&nbsp;&nbsp;생활지도에 유용한 기초적인 상담 수준의 대화를 배우고 싶다면 이 아래를 마저 읽으면 된다.</p>
 							</section>
 							<section>
 								<h2><a name="3">3. 생활지도와 교과 수업</a></h2>
