--- a/html/bs/index.html
+++ b/html/bs/index.html
@@ -87,7 +87,7 @@
 							<section>
 								<h2><a name="2">2. 상담과 생활지도</a></h2>
 								<p>&nbsp;&nbsp;‘상담’이라고 하면 몇 가지 장면이 떠오른다. 첫째, 3월에 학생들을 파악하기 위해 한 명씩 불러서 담임 선생님과 학생이 나누는 대화. 둘째, 문제 있는 학생과 교사가 문제 행동에 대하여 나누는 대화. 셋째, 학생이 고민이 있어서 교사를 찾아와서 위로나 조언을 구하는 대화. 이중 첫째와 둘째는 상담이 아니다. ‘상담’을 모욕하는 말이다. 첫째는 굳이 이름 붙이면 ‘면담’이고 둘째는 ‘취조’ 아니면 ‘훈육’ 정도가 될 것이다. 셋째의 경우가 상담이며, 전문적인 상담 기술이 필요한 주제라면 교내의 전문 상담 교사나 외부의 상담기관에 맡겨야 하고, 일반적인 주제라면 간단한 상담 대화 기술을 배워서 교사가 해결할 수 있다.</p>
-								<img src="images/01neis.gif" alt="" />
+								<img src="images/01neis.gif" alt="" /><br />
 								<p>&nbsp;&nbsp;요즘은 어떤지 모르겠지만 담임을 할 때 NEIS 시스템에 상담 기록을 남기라고 하면서 이런 시스템을 만들어 준 적이 있었다. 상담의 소분류를 만든 사람이 상담을 뭐라고 생각하는지 알 수 있다.</p>
 								<p>&nbsp;&nbsp;‘상담’과 생활지도의 관계는 어떠할까? 지각하는 아이, 떠드는 아이, 담배 피는 아이, 화장하는 아이, 무단결석하는 아이, 교실 어지르는 아이, 교복 안 입는 아이, 다른 친구 괴롭히는 아이, 기물 파손하는 아이를 ‘상담’을 통해 변화시킬 수 있을까? 애초에 질문이 틀렸다. 상담은 상대를 변화시키기 위한 대화법이 아니다. 상담은 오직 ‘상대를 이해하기 위한’ 대화일 따름이다. 이러한 상담의 정의가 앞의 셋째, ‘학생이 고민이 있어서 교사를 찾아와서 위로나 조언을 구하는 대화’에 적용될 수 있을까? 교사는 조언을 구하며 고민하는 학생에게 조언을 줄 수 있다. 하지만 그보다 더 중요한 것은 학생의 고민을 ‘이해’하는 것이다. 학생의 고민을 어느 수준까지 이해하는가에 따라 위로와 조언의 영향력이 커지기도 하고 작아지기도 한다.</p>
 								<p>&nbsp;&nbsp;‘학생을 이해’하는 것은 상담에서도 중요하지만 ‘3월에 학생들을 파악하기 위해 한 명씩 불러서 담임 선생님과 학생이 대화를 나눌 때’에도 중요하고, ‘문제 있는 학생과 교사가 문제 행동에 대하여 나누는 대화’ 즉, 앞에 나왔던 ‘교칙에 언급되지 않는 기본적인 규칙’과 ‘교칙에서 처벌 규정이 명시되지 않은 규칙’을 어긴 학생과의 대화, ‘교칙에서 처벌 규정이 명시된 규칙’과 ‘법률에 규정된 일반적인 규칙’을 어긴 학생과의 대화에서도 중요하다.</p>
@@ -95,13 +95,13 @@
 								<p>&nbsp;&nbsp;‘학생을 이해’하기 위해, "힘들어요." 하는 학생에게 "왜 힘드니?"라고 묻는 것은 적절하지 않다. "불안해요." 하는 학생에게 "왜 불안하니?"라고 묻는 것도 적절하지 않다. 아래 영상의 '불안해 하는 사람' 표정을 보자. 불안해 하는 사람에게 말 거는 옆 사람의 대응이 적절해 보이는지?</p>
 								<video src="./videos/00_nagasu.mp4"  poster="./images/nagasu.png" width="640" preload="metadata" controls="controls"></video>
 								<p>&nbsp;&nbsp;‘학생을 이해’하기 위해 기초적인 수준의 상담 대화 기술을 응용하면 큰 도움이 된다. 이 아래의 이야기는 기초적인 수준의 상담 대화 기술을 실제로 어떻게 응용하는지에 관한 내용들이다.</p>
-								<img src="images/001.png" alt="" />
-								<img src="images/002.png" alt="" />
-								<img src="images/003.png" alt="" />
-								<img src="images/004.png" alt="" />
-								<img src="images/005.png" alt="" />
-								<img src="images/006.png" alt="" />
-								<img src="images/007.png" alt="" />
+								<img src="images/001.png" alt="" /><br />
+								<img src="images/002.png" alt="" /><br />
+								<img src="images/003.png" alt="" /><br />
+								<img src="images/004.png" alt="" /><br />
+								<img src="images/005.png" alt="" /><br />
+								<img src="images/006.png" alt="" /><br />
+								<img src="images/007.png" alt="" /><br />
 								<p>&nbsp;&nbsp;생활지도에 유용한 기초적인 상담 수준의 대화를 배우고 싶다면 이 아래를 마저 읽으면 된다.</p>
 							</section>
 							<section>
