--- a/html/bs/index.html
+++ b/html/bs/index.html
@@ -407,9 +407,10 @@
 										</td>
 									</tr>
 								</table>
-								<p>&nbsp;&nbsp;학교에서 발생하는 갈등은, “있어서는 안 되는 일”이 아니라, 일상 그 자체이다. 교사에게 갈등은, “골치 아픈 일”이 아니라, 학생을 이해하고, 학생들이 서로를 이해하는 좋은 기회이다. 교사가 갈등을 부담스러워하는 것은 첫째, 갈등을 해결할 역량, 기술이 부족하기 때문이다. 학생 간의 갈등이 몇 마디 말로 풀리고 학생들의 굳은 표정이 서서히 부드러워지는 경험을 몇 번만 하고 나면 나중에는 오히려 학생 간의 갈등이 발생하기를 기다리고 갈등 상황에 개입하는 것을 즐기게 된다.</p>
+								<p>&nbsp;&nbsp;학교에서 발생하는 갈등은, “있어서는 안 되는 일”이 아니라, 일상 그 자체이다. 교사에게 갈등은, “골치 아픈 일”이 아니라, 학생을 이해하고, 학생들이 서로를 이해하는 좋은 기회이다. 교사가 갈등을 부담스러워하는 것은 첫째, 갈등을 해결할 역량, 기술이 부족하기 때문이다. 학생 간의 갈등이 몇 마디 말로 풀리고 학생들의 굳은 표정이 서서히 부드러워지는 경험을 몇 번만 하고 나면 나중에는 오히려 학생 간의 갈등이 발생하기를 기다리고 갈등 상황에 개입하는 것을 즐기게 된다. 다음과 같이 극단적인 갈등과 대립도 교사는 지금까지의 방법을 응용하여 해결할 수 있게 된다.</p>
+								<video src="./videos/03_busuk.mp4" poster="images/bousk.png" width="640" preload="metadata" controls="controls"></video>
 								<p>&nbsp;&nbsp;어른은 물론이고 아무리 어린 학생이라 해도 십여년 살아오면서 수많은 경험을 하고 그 경험에 대한 저마다의 해석과 느낌을 마음 속에 품은 채 지금 여기를 살아간다. 그래서 어떤 새로운 경험을 하게 되면 과거의 경험을 바탕으로 새로운 경험에 대한 평가와 판단과 해석을 하게 된다. 서로의 경험이 다르다면 같은 시간 같은 공간에서 새로운 경험을 공유했더라도 그에 대해 남는 인상은 다를 것이다. 교사가 갈등을 부담스러워하는 두번째 이유는, 학생 간의 갈등이 점차 커져서 수습하기 곤란해지거나, 갈등을 제대로 해결하지 못해 마음의 짐으로 남은 ‘과거의 경험’들이 지금 현재를 지배하기 때문이다. 교사가 (1) ~ (3)의 대화 기술을 이용해 학생간의 갈등을 중재해 주고 나면, 학생들에게는 그 경험이 어떻게 기억될까?</p>
-								<p>&nbsp;&nbsp;한 친구를 ‘나와 싸운 친구’로 인식하며 평생 사는 것과, ‘나와 화해한 친구’로 인식하며 사는 것 중 어느 쪽이 행복할까? 수험에서 실패한 일을 ‘내가 실패한 경험’으로 인식하며 사는 사람과 ‘실패했지만 좌절하지 않았던 경험’으로 인식하며 사는 사람은 어째서 달라지는가?</p>
+								<p>&nbsp;&nbsp;한 친구를 ‘나와 싸운 친구’로 인식하며 평생 사는 것과, ‘나와 화해한 친구’로 인식하며 사는 것 중 어느 쪽이 행복할까? 수험에서 실패한 일을 ‘내가 실패한 경험’으로 인식하며 사는 사람과 ‘실패했지만 좌절하지 않았던 경험’으로 인식하며 사는 사람은 어째서 달라지는가? 갈등 관리가 중요한 이유이다.</p>
 
 							</section>
 							
